--- a/index.html
+++ b/index.html
@@ -22,9 +22,27 @@
                <img class="erti"  src="images/sanapiro1.png">
                <div class="notcon">
                 <h5>You can see this beautiful beach in Los Angeles, and I hope you will visit and enjoy it one day</h5>
-                <img class="mesame" src="images/"
-                <h6></h6>
+                <img class="mesame" src="images/Ellipse 2.png">
+                <h5 class="meotxe">2m ago</h5>
                </div>
+    </div>
+       </section> 
+
+       <section>  
+  <div class="container1">
+               <h1>TRANDING</h1>  
+               <img class="erti"  src="images/sanapiro1.png">
+               <div class="notcon">
+                <h5>You can see this beautiful beach in Los Angeles, and I hope you will visit and enjoy it one day</h5>
+                <img class="mesame" src="images/Ellipse 2.png">
+                <h5 class="meotxe">2m ago</h5>
+               </div>
+    </div>
+
+       </section>
+       <section>
+        <div class="container2">
+        <h1>HAPPENING NOW</h1>
     </div>
        </section>
     </body>
