--- a/index.html
+++ b/index.html
@@ -20,26 +20,17 @@
             <div class="container1">
                <h1>TRANDING</h1>  
                <img class="erti"  src="images/sanapiro1.png">
-               <div class="notcon">
-                <h5>You can see this beautiful beach in Los Angeles, and I hope you will visit and enjoy it one day</h5>
-                <img class="mesame" src="images/Ellipse 2.png">
-                <h5 class="meotxe">2m ago</h5>
-               </div>
-    </div>
-       </section> 
+                  <img class="erti1"  src="images/tba.png">
+                  <img class="meramdene"  src="images/yinulkebi.png"> 
+                  <div class="racari">
+                    <h5>You can see this beautiful beach in Los Angeles, and 
 
-       <section>  
-  <div class="container1">
-               <h1>TRANDING</h1>  
-               <img class="erti"  src="images/sanapiro1.png">
-               <div class="notcon">
-                <h5>You can see this beautiful beach in Los Angeles, and I hope you will visit and enjoy it one day</h5>
-                <img class="mesame" src="images/Ellipse 2.png">
-                <h5 class="meotxe">2m ago</h5>
-               </div>
+                        I hope you will visit and enjoy it one day</h5>
+                     <img class="arafrri" src="images/Ellipse 2.png">
+                     <img class="inm" src="images/2m ago.jpg">
+                  </div>
     </div>
-
-       </section>
+   </section>
        <section>
         <div class="container2">
         <h1>HAPPENING NOW</h1>
