--- a/index.html
+++ b/index.html
@@ -29,12 +29,31 @@
                      <img class="arafrri" src="images/Ellipse 2.png">
                      <img class="inm" src="images/2m ago.jpg">
                   </div>
+                  <div class="iyos">
+                    <h5>You can see this beautiful beach in Ibiza , and 
+
+                        I hope you will visit and enjoy it one day</h5>
+                        <img class="imn" src="images/Ellipse 2.png">
+                        <img class="clasi" src="images/2m ago.jpg">
+                  </div>
+                  <div class="mesame">
+                    <h5>You can see this beautiful beach in Iceland, and
+
+                        I hope you will visit and enjoy it one day</h5>
+                        <img class="arafrri" src="images/Ellipse 2.png">
+                     <img class="inm" src="images/2m ago.jpg">
+                  </div>
     </div>
    </section>
        <section>
         <div class="container2">
         <h1>HAPPENING NOW</h1>
-    </div>
+        <img class="foto1" src="images/mtaxidi.png">
+         <img class="foto2" src="images/tye.png">
+         <img class="foto3" src="images/mta.png">
+         <img class="foto4" src="images/spliyvi.png">
+        </div>
        </section>
     </body>
 </html>
+
